fix: col-gap changes in Tailwind

--- a/src/components/utilities/grid/grid.scss
+++ b/src/components/utilities/grid/grid.scss
@@ -19,7 +19,7 @@ $gap: 24;
 
     &--spaced {
         > .grid__inner {
-            @apply col-gap-24;
+            @apply gap-x-24;
         }
     }
 
